# KV_Cache-Compression-Benchmark

./: .gitignore  README.md  l2norm.ipynb  pyproject.toml  requirements-kaggle.txt
docs/: IMPLEMENTATION_NOTES.md  SNAPKV_NOTES.md
scripts/: debug_passkey.py  plot_passkey_heatmap.py  plot_retrieval.py  plot_snapkv_ablation.py  plot_snapkv_kv_retrieval.py  run_alr_scan.py  run_basic_passkey.py  run_distractor_passkey.py  run_kv_retrieval.py  run_l2_kv_retrieval.py  run_l2_passkey.py  run_light_passkey_benchmark.py  run_online_lm.py  run_passkey.py  run_snapkv_ablation.py  run_snapkv_kv_retrieval.py  run_snapkv_passkey.py  show_alr_heatmap.py  show_attention_l2.py  smoke_test_qwen.py  smoke_test_snapkv_qwen.py
src/l2kv/: __init__.py  alr.py  attention_viz.py  cache_compression.py  cache_metrics.py  configs.py  kv_retrieval.py  kv_retrieval_eval.py  model_utils.py  passkey.py  position_utils.py  retrieval_eval.py  runtime_metadata.py  snapkv.py
tests/: test_cache_compression.py  test_kv_retrieval.py  test_kv_retrieval_eval.py  test_kv_retrieval_explicit_v2.py  test_l2_kv_retrieval_runner.py  test_passkey.py  test_passkey_runners.py  test_plot_passkey_heatmap.py  test_plot_snapkv_ablation.py  test_position_utils.py  test_retrieval_eval.py  test_snapkv.py  test_snapkv_ablation.py  test_snapkv_kv_retrieval.py
