[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "l2kv"
version = "0.1.0"
description = "L2-norm KV cache compression experiments for HuggingFace causal LMs."
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch==2.10.0",
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "datasets==4.4.2",
    "huggingface-hub==0.36.2",
    "tokenizers==0.22.2",
    "safetensors==0.7.0",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
